# scg-smart-mirror-model-api-version

./: .gitignore  app.py  emotion_detect.py  emotional.txt  my_threshold.json  pyproject.toml  recorder.py  sentiment.json  test_emotion.txt  test_multiprocessing.py  video2.py  video_emotion.json  videotester.py  vision-api-key.json  voice.py  voice_text.txt
