[tool.poetry]
name = "02_emotion_detect"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
opencv-python = "^4.5.5"
matplotlib = "^3.5.1"
keras = "^2.8.0"
tensorflow = "^2.8.0"
Flask = "^2.1.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
